--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content padding>
-  <ion-button (click)="openBrowser()" expand="full">Go to Xlogic </ion-button>
+<ion-content padding class="a">
+  <ion-button color="secondary" class="button" (click)="openBrowser()" expand="full" >Go to Xlogic </ion-button>
 
 </ion-content>
