--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,12 @@
 .new-background-color{
   --background: #eceff4;
 }
+
+.button
+{
+  margin-top: 15px ;
+}
+
+.a {
+  --background: rgba(177, 184, 184, 0.4);
+}
